welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value abs
  if(abs(n-100)<=10 || abs(n-200)<=10){
     ^nearHundred:2: error: not found: value abs
  if(abs(n-100)<=10 || abs(n-200)<=10){
                       ^