welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if(abs(n-100)<=10 || abs(n-200)<=10){
    return true;
  }
  return false;
}